--- a/apps/cnp/sbox/base/test-ingress-redirect.yaml
+++ b/apps/cnp/sbox/base/test-ingress-redirect.yaml
@@ -29,5 +29,5 @@ metadata:
 spec:
   redirectRegex:
     permanent: true
-    regex: ^https://labs-mokainosspringboot-sandbox.service.core-compute-sandbox.internal(.*)
-    replacement: https://plum.sandbox.platform.hmcts.net
+    regex: ^http://labs-mokainosspringboot-sandbox.service.core-compute-sandbox.internal(.*)
+    replacement: http://plum.sandbox.platform.hmcts.net
