--- a/apps/jenkins/jenkins/ptl-intsvc/jenkins-beta-ingress.yaml
+++ b/apps/jenkins/jenkins/ptl-intsvc/jenkins-beta-ingress.yaml
@@ -29,5 +29,5 @@ metadata:
 spec:
   redirectRegex:
     permanent: true
-    regex: ^https://build-beta.platform.hmcts.net/(.*)
-    replacement: https://build.platform.hmcts.net/$1
+    regex: ^http://build-beta.platform.hmcts.net/(.*)
+    replacement: http://build.platform.hmcts.net/$1
