--- a/k8s/prod/common/fact/fact-redirect.yaml
+++ b/k8s/prod/common/fact/fact-redirect.yaml
@@ -29,5 +29,5 @@ metadata:
 spec:
   redirectRegex:
     permanent: true
-    regex: ^https://courttribunalfinder.service.gov.uk/(.*)
-    replacement: https://www.find-court-tribunal.service.gov.uk/$1
+    regex: ^http://courttribunalfinder.service.gov.uk/(.*)
+    replacement: http://www.find-court-tribunal.service.gov.uk/$1
