--- a/k8s/prod/common/xui/jui-ingress.yaml
+++ b/k8s/prod/common/xui/jui-ingress.yaml
@@ -29,5 +29,5 @@ metadata:
 spec:
   redirectRegex:
     permanent: true
-    regex: ^https://jcm.judiciary.uk/(.*)
-    replacement: https://manage-case.platform.hmcts.net
+    regex: ^http://jcm.judiciary.uk/(.*)
+    replacement: http://manage-case.platform.hmcts.net
