--- a/k8s/aat/common/sscs/sscs-track-appeal-redirect-ingress.yaml
+++ b/k8s/aat/common/sscs/sscs-track-appeal-redirect-ingress.yaml
@@ -29,5 +29,5 @@ metadata:
 spec:
   redirectRegex:
     permanent: true
-    regex: ^https://track-appeal.aat.platform.hmcts.net/evidence/(.*)|https://track-appeal.aat.platform.hmcts.net/trackyourappeal/(.*)|https://track-appeal.aat.platform.hmcts.net/expenses/(.*)|https://track-appeal.aat.platform.hmcts.net/abouthearing/(.*)|https://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/evidence|https://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/trackyourappeal|https://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/expenses|https://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/abouthearing|https://track-appeal.aat.platform.hmcts.net/(.*)
-    replacement: https://sscs-cor.aat.platform.hmcts.net/validate-surname/:tya/trackyourappeal?tya=${1}${2}${3}${4}${5}${6}${7}${8}
+    regex: ^http://track-appeal.aat.platform.hmcts.net/evidence/(.*)|https://track-appeal.aat.platform.hmcts.net/trackyourappeal/(.*)|https://track-appeal.aat.platform.hmcts.net/expenses/(.*)|https://track-appeal.aat.platform.hmcts.net/abouthearing/(.*)|https://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/evidence|https://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/trackyourappeal|https://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/expenses|https://track-appeal.aat.platform.hmcts.net/validate-surname/(.*)/abouthearing|https://track-appeal.aat.platform.hmcts.net/(.*)
+    replacement: http://sscs-cor.aat.platform.hmcts.net/validate-surname/:tya/trackyourappeal?tya=${1}${2}${3}${4}${5}${6}${7}${8}
