--- a/k8s/ithc/common/xui/register-org-ingress.yaml
+++ b/k8s/ithc/common/xui/register-org-ingress.yaml
@@ -29,5 +29,5 @@ metadata:
 spec:
   redirectRegex:
     permanent: true
-    regex: ^https://register-org.ithc.platform.hmcts.net/(.*)
-    replacement: https://manage-org.ithc.platform.hmcts.net/register-org/register
+    regex: ^http://register-org.ithc.platform.hmcts.net/(.*)
+    replacement: http://manage-org.ithc.platform.hmcts.net/register-org/register
