replacement to https

--- a/apps/cnp/sbox/base/test-ingress-redirect.yaml
+++ b/apps/cnp/sbox/base/test-ingress-redirect.yaml
@@ -30,4 +30,4 @@ spec:
   redirectRegex:
     permanent: true
     regex: ^http://labs-mokainosspringboot-sandbox.service.core-compute-sandbox.internal(.*)
-    replacement: http://plum.sandbox.platform.hmcts.net
+    replacement: https://plum.sandbox.platform.hmcts.net
