--- a/apps/jenkins/jenkins/ptl-intsvc/jenkins-beta-ingress.yaml
+++ b/apps/jenkins/jenkins/ptl-intsvc/jenkins-beta-ingress.yaml
@@ -30,4 +30,4 @@ spec:
   redirectRegex:
     permanent: true
     regex: ^http://build-beta.platform.hmcts.net/(.*)
-    replacement: http://build.platform.hmcts.net/$1
+    replacement: https://build.platform.hmcts.net/$1
