--- a/k8s/perftest/common/xui/register-org-ingress.yaml
+++ b/k8s/perftest/common/xui/register-org-ingress.yaml
@@ -30,4 +30,4 @@ spec:
   redirectRegex:
     permanent: true
     regex: ^http://register-org.perftest.platform.hmcts.net/(.*)
-    replacement: http://manage-org.perftest.platform.hmcts.net/register-org/register
+    replacement: https://manage-org.perftest.platform.hmcts.net/register-org/register
