--- a/k8s/prod/common/fact/fact-redirect.yaml
+++ b/k8s/prod/common/fact/fact-redirect.yaml
@@ -30,4 +30,4 @@ spec:
   redirectRegex:
     permanent: true
     regex: ^http://courttribunalfinder.service.gov.uk/(.*)
-    replacement: http://www.find-court-tribunal.service.gov.uk/$1
+    replacement: https://www.find-court-tribunal.service.gov.uk/$1
