--- a/k8s/prod/common/xui/jui-ingress.yaml
+++ b/k8s/prod/common/xui/jui-ingress.yaml
@@ -30,4 +30,4 @@ spec:
   redirectRegex:
     permanent: true
     regex: ^http://jcm.judiciary.uk/(.*)
-    replacement: http://manage-case.platform.hmcts.net
+    replacement: https://manage-case.platform.hmcts.net
