--- a/k8s/prod/common/xui/register-org-ingress.yaml
+++ b/k8s/prod/common/xui/register-org-ingress.yaml
@@ -31,4 +31,4 @@ spec:
   redirectRegex:
     permanent: true
     regex: ^http://register-org.platform.hmcts.net/(.*)
-    replacement: http://manage-org.platform.hmcts.net/register-org/register
+    replacement: https://manage-org.platform.hmcts.net/register-org/register
