--- a/k8s/demo/common/xui/register-org-ingress.yaml
+++ b/k8s/demo/common/xui/register-org-ingress.yaml
@@ -5,7 +5,9 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: traefik-no-proxy
-    traefik.ingress.kubernetes.io/router.middlewares: xui-registerorgredirect@kubernetescrd
+    traefik.ingress.kubernetes.io/redirect-permanent: "true"
+    traefik.ingress.kubernetes.io/redirect-regex: ^https://register-org.demo.platform.hmcts.net/(.*)
+    traefik.ingress.kubernetes.io/redirect-replacement: https://manage-org.demo.platform.hmcts.net/register-org/register
   name: register-org-ingress
   namespace: xui
 spec:
@@ -20,14 +22,3 @@ spec:
                   number: 80
             path: /
             pathType: ImplementationSpecific
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: registerorgredirect
-  namespace: xui
-spec:
-  redirectRegex:
-    permanent: true
-    regex: ^http://register-org.demo.platform.hmcts.net/(.*)
-    replacement: https://manage-org.demo.platform.hmcts.net/register-org/register
