--- a/k8s/namespaces/ccd/ccd-case-disposer/aat-01.yaml
+++ b/k8s/namespaces/ccd/ccd-case-disposer/aat-01.yaml
@@ -8,6 +8,7 @@ spec:
       schedule: "0/45 * * * *"
       environment:
         ELASTIC_SEARCH_ENABLED: true
+        LOG_AND_AUDIT_ENABLED: true
         DATA_STORE_DB_PORT: 5432
         DATA_STORE_DB_OPTIONS: "?sslmode=require"
         DATA_STORE_DB_HOST: "ccd-data-store-api-postgres-db-v11-aat.postgres.database.azure.com"
