LAU: Ensure case audit delete is disabled for prod.

--- a/k8s/namespaces/ccd/ccd-case-disposer/prod-00.yaml
+++ b/k8s/namespaces/ccd/ccd-case-disposer/prod-00.yaml
@@ -21,6 +21,7 @@ spec:
         ROLE_ASSIGNMENT_HOST: "http://am-role-assignment-service-prod.service.core-compute-prod.internal"
         DOCUMENT_STORE_HOST: "http://dm-store-prod.service.core-compute-prod.internal"
         DEFINITION_STORE_HOST: "http://ccd-definition-store-api-prod.service.core-compute-prod.internal"
+        LOG_AND_AUDIT_HOST: "http://lau-case-backend-prod.service.core-compute-prod.internal"
         DELETE_CASE_TYPES: "MoneyClaimCase"
         SIMULATED_CASE_TYPES:
 
