--- a/k8s/namespaces/ccd/ccd-case-disposer/ithc-01.yaml
+++ b/k8s/namespaces/ccd/ccd-case-disposer/ithc-01.yaml
@@ -17,5 +17,6 @@ spec:
         ROLE_ASSIGNMENT_HOST: "http://am-role-assignment-service-ithc.service.core-compute-ithc.internal"
         DOCUMENT_STORE_HOST: "http://dm-store-ithc.service.core-compute-ithc.internal"
         DEFINITION_STORE_HOST: "http://ccd-definition-store-api-ithc.service.core-compute-ithc.internal"
+        LOG_AND_AUDIT_HOST: "http://lau-case-backend-ithc.service.core-compute-ithc.internal"
         DELETE_CASE_TYPES:
         SIMULATED_CASE_TYPES:
