div-fps prod fv2 files

--- a/apps/divorce/base/kustomization.yaml
+++ b/apps/divorce/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../base
   - ../identity/identity.yaml
+  - ../div-fps/div-fps.yaml
   - ../div-emca/div-emca.yaml
   - ../div-cms/div-cms.yaml
   - ../div-cfs/div-cfs.yaml
