--- a/apps/divorce/div-fps/prod.yaml
+++ b/apps/divorce/div-fps/prod.yaml
@@ -1,7 +1,8 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: div-fps
+  namespace: divorce
 spec:
   values:
     java:
@@ -9,6 +10,5 @@ spec:
         MANAGEMENT_ENDPOINT_HEALTH_CACHE_TIMETOLIVE: 5000
         GENERAL_APPLICATION_WITHOUT_NOTICE_FEE_KEYWORD: "GeneralAppWithoutNotice"
         FEATURE_FEE_PAY_KEYWORDS: "true"
-        VAR_TA: prod-trig3
       prometheus:
         enabled: true
