--- a/apps/et/automation/kustomization.yaml
+++ b/apps/et/automation/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../et-cos/image-repo.yaml
   - ../et-cos/image-policy.yaml
+  - ../et-cos/aat-image-policy.yaml
   - ../et-cos/demo-image-policy.yaml
   - ../et-cos/ithc-image-policy.yaml
   - ../et-cos/perftest-image-policy.yaml
