--- a/apps/et/et-cos/aat.yaml
+++ b/apps/et/et-cos/aat.yaml
@@ -8,3 +8,4 @@ spec:
     java:
       environment:
         REFERRAL_TEMPLATE_ID: 6fcc1bb8-c4db-4437-9865-c2c937c7eed2
+        image: hmctspublic.azurecr.io/et/cos:pr-483-853efef-20220923223323 #{"$imagepolicy": "flux-system:aat-et-cos"}
