--- a/apps/et/demo/base/kustomization.yaml
+++ b/apps/et/demo/base/kustomization.yaml
@@ -8,6 +8,6 @@ namespace: et
 patchesStrategicMerge:
   - ../../identity/demo.yaml
   - ../../et-cos/demo.yaml
-  - ../../et-msg-handler/demo-image-policy.yaml
+  - ../../et-msg-handler/demo.yaml
   #- ../../et-sya/demo.yaml
   #- ../../et-sya-api/demo.yaml
