--- a/k8s/namespaces/civil/civil-service/ithc.yaml
+++ b/k8s/namespaces/civil/civil-service/ithc.yaml
@@ -5,6 +5,29 @@ metadata:
 spec:
   values:
     java:
+      keyVaults:
+        civil:
+          resourceGroup: civil
+          secrets:
+            - civil-idam-client-secret
+            - microservicekey-civil-service
+            - system-update-user-username
+            - system-update-user-password
+            - cross-access-user-username
+            - cross-access-user-password
+            - prd-admin-user-username
+            - prd-admin-user-password
+            - AppInsightsInstrumentationKey
+            - docmosis-api-key
+            - cmc-db-password-v11
+            - gov-notify-api-key
+            - sendgrid-api-key
+            - robotics-notification-sender
+            - robotics-notification-recipient
+            - robotics-notification-recipient-spec
+            - launch-darkly-sdk-key
+            - robotics-notification-multipartyrecipient
+            - ordnance-survey-api-key
       environment:
         TESTING_SUPPORT_ENABLED: true
         EM_CCD_ORCHESTRATOR_URL: http://em-ccdorc-ithc.service.core-compute-demo.internal
