--- a/apps/et/et-sya/demo.yaml
+++ b/apps/et/et-sya/demo.yaml
@@ -8,4 +8,4 @@ spec:
   values:
     nodejs:
       ingressHost: et-sya.demo.platform.hmcts.net
-      ingressClass: traefik-private
+      ingressClass: traefik
