revert schedule time

--- a/k8s/namespaces/probate/probate-cron-smee-and-ford-extract/prod-00.yaml
+++ b/k8s/namespaces/probate/probate-cron-smee-and-ford-extract/prod-00.yaml
@@ -6,6 +6,4 @@ spec:
   releaseName: probate-cron-smee-and-ford-extract
   values:
     job:
-      schedule: "25 12 * * *"
-      environment:
-        ADHOC_JOB_DATE: 2022-09-28
+      schedule: "25 2 1-31/2 * *"
