--- a/updatecli/weekly.d/jenkins-packer.yaml
+++ b/updatecli/weekly.d/jenkins-packer.yaml
@@ -42,7 +42,7 @@ pullrequests:
   setAzureGalleryImageVersion:
     kind: github
     scmid: default
-    title: >
+    title: >-
       [updatecli] Bump jenkins-packer version to {{ source "latestPackerImageVersion" }}
     spec:
       automerge: false
