div-da demo fv2 files

--- a/k8s/prod/common-overlay/divorce/kustomization.yaml
+++ b/k8s/prod/common-overlay/divorce/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: divorce
 bases:
 - ../../../namespaces/divorce
 - ../../../namespaces/divorce/namespace.yaml
+- ../../../namespaces/divorce/div-da/div-da.yaml
 patchesStrategicMerge:
 - ../../../namespaces/divorce/div-da/prod.yaml
 - ../../../namespaces/divorce/div-dgs/prod.yaml
