--- a/apps/divorce/demo/base/kustomization.yaml
+++ b/apps/divorce/demo/base/kustomization.yaml
@@ -2,8 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../div-da/div-da.yaml
 namespace: divorce
 patchesStrategicMerge:
+  - ../../div-da/demo.yaml
   - ../../div-fps/demo.yaml
   - ../../div-emca/demo.yaml
   - ../../div-cms/demo.yaml
