--- a/apps/divorce/div-da/demo.yaml
+++ b/apps/divorce/div-da/demo.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: div-dn
+  name: div-da
   namespace: divorce
 spec:
   values:
