--- a/apps/civil/aat/base/kustomization.yaml
+++ b/apps/civil/aat/base/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ../../../xui/identity/identity.yaml
   - ../../../am/identity/identity.yaml
   - ../../../money-claims/identity/identity.yaml
+  - ../../../rbac/nonprod-role.yaml
 patchesStrategicMerge:
   - ../../identity/aat.yaml
   - ../../../xui/identity/aat.yaml
