--- a/apps/civil/preview/base/kustomization.yaml
+++ b/apps/civil/preview/base/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ../../../ccd/identity/identity.yaml
   - ../../../aac/identity/identity.yaml
   - resource-limits.yaml
+  - ../../../rbac/nonprod-role.yaml
 namespace: civil
 patchesStrategicMerge:
   - ../../identity/aat.yaml
