--- a/k8s/namespaces/fees-pay/pba-payment-job-int/demo.yaml
+++ b/k8s/namespaces/fees-pay/pba-payment-job-int/demo.yaml
@@ -8,7 +8,7 @@ spec:
   values:
     job:
       image: "hmctspublic.azurecr.io/payment/jobs:pr-44-5da30d5-20220928054120" #{"$imagepolicy": "flux-system:demo-int-pba-csv-report"}
-      schedule: "30 2 * * *"
+      schedule: "*/3 * * * *"
       environment:
         DUMMY_RESTART_VAR: true
         PAYMENT_SERVER_URL: http://payment-api-int-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
