Add add-pod-id mi

--- a/apps/admin/demo/01/kustomization.yaml
+++ b/apps/admin/demo/01/kustomization.yaml
@@ -7,8 +7,9 @@ resources:
   - ../../traefik2
   - ../../traefik2-no-proxy
   - ../../external-dns-2/
+  - ../../aad-pod-id/mi
 
-  # to add to base look at external dns, aad-pod-mi
+  # to add to base look at external dns
 
 patchesStrategicMerge:
   - ../../external-dns/demo/01.yaml
