--- a/k8s/namespaces/civil/civil-general-applications/demo.yaml
+++ b/k8s/namespaces/civil/civil-general-applications/demo.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/civil/general-applications:pr-582 #{"$imagepolicy": "flux-system:civil-general-applications"}
+      image: hmctspublic.azurecr.io/civil/general-applications:pr-582-a2bb477-20221003141921 #{"$imagepolicy": "flux-system:civil-general-applications"}
       keyVaults:
         civil:
           resourceGroup: civil
