Add traefik auth

--- a/apps/admin/demo/01/kustomization.yaml
+++ b/apps/admin/demo/01/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ../../secrets-csi-driver
   - ../../traefik2
   - ../../traefik2-no-proxy
+  - ../../traefik2-auth
   - ../../external-dns-2/
   - ../../aad-pod-id/mi
 
@@ -20,4 +21,4 @@ patchesStrategicMerge:
   - ../../traefik2/demo/01.yaml
   - ../../traefik2/demo/traefik-private.yaml
   - ../../traefik2-no-proxy/demo/01.yaml
-  - ../../traefik-auth/demo/01.yaml
+  - ../../traefik2-auth/demo/01.yaml
