Fully remove traefik1 from base

--- a/apps/admin/demo/00/kustomization.yaml
+++ b/apps/admin/demo/00/kustomization.yaml
@@ -8,6 +8,10 @@ resources:
   - ../../traefik-private
   - ../../csi-secret-store-provider-v1.0.1
   - ../../external-dns/
+  - ../../external-dns-public/
+  - ../base/external-dns.yaml
+  - ../base/traefik-values.yaml
+
 
 patchesStrategicMerge:
   - ../../external-dns/demo/00.yaml
