--- a/apps/sptribs/automation/kustomization.yaml
+++ b/apps/sptribs/automation/kustomization.yaml
@@ -3,3 +3,5 @@ kind: Kustomization
 resources:
   - ../sptribs-case-api/image-repo.yaml
   - ../sptribs-case-api/image-policy.yaml
+  - ../sptribs-dss-backend/image-repo.yaml
+  - ../sptribs-dss-backend/image-policy.yaml
