Add demo domain filters

--- a/apps/admin/demo/01/kustomization.yaml
+++ b/apps/admin/demo/01/kustomization.yaml
@@ -11,10 +11,9 @@ resources:
   - ../../aad-pod-id/mi
   - ../../external-dns-2/demo/external-dns.yaml
 
-  # to add to base look at external dns
-
 patchesStrategicMerge:
   - ../../external-dns-2/demo/01-external-dns.yaml
+  - ../../external-dns-2/demo/external-dns-private.yaml
   - ../../external-dns-2/demo/01-external-dns-private.yaml
   - ../../traefik2/demo/01.yaml
   - ../../traefik2/demo/traefik-private.yaml
