--- a/apps/admin/external-dns-2/demo/external-dns.yaml
+++ b/apps/admin/external-dns-2/demo/external-dns.yaml
@@ -24,6 +24,7 @@ spec:
       - ingress
     domainFilters:
       - demo.platform.hmcts.net
+      - service.core-compute-demo.internal
     annotationFilter: "kubernetes.io/ingress.class=traefik"
     azure:
       resourceGroup: reformMgmtRG
