--- a/apps/admin/demo/01/kustomization.yaml
+++ b/apps/admin/demo/01/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ../../traefik2-auth
   - ../../external-dns-2/
   - ../../aad-pod-id/mi
+  - ../../oauth2-proxy
   - ../../external-dns-2/demo/external-dns.yaml
 
 patchesStrategicMerge:
@@ -19,3 +20,4 @@ patchesStrategicMerge:
   - ../../traefik2/demo/traefik-private.yaml
   - ../../traefik2-no-proxy/demo/01.yaml
   - ../../traefik2-auth/demo/01.yaml
+  - ../../oauth2-proxy/demo/01-oauth2-proxy.yaml
