--- a/apps/civil/preview/base/kustomization.yaml
+++ b/apps/civil/preview/base/kustomization.yaml
@@ -11,6 +11,8 @@ resources:
   - ../../../aac/identity/identity.yaml
   - resource-limits.yaml
   - ../../../rbac/nonprod-role.yaml
+  - ../civil-citizen-ui/image-repo.yaml
+  - ../civil-citizen-ui/image-policy.yaml
 namespace: civil
 patchesStrategicMerge:
   - ../../identity/aat.yaml
