--- a/apps/civil/civil-general-applications/image-repo.yaml
+++ b/apps/civil/civil-general-applications/image-repo.yaml
@@ -3,4 +3,6 @@ kind: ImageRepository
 metadata:
   name: civil-general-applications
 spec:
+  java:
+    replicas: 2
   image: hmctspublic.azurecr.io/civil/general-applications
