--- a/apps/civil/civil-service/demo.yaml
+++ b/apps/civil/civil-service/demo.yaml
@@ -1,7 +1,8 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: civil-service
+  namespace: civil
 spec:
   values:
     java:
@@ -29,13 +30,6 @@ spec:
             - robotics-notification-multipartyrecipient
             - ordnance-survey-api-key
       environment:
-        OIDC_ISSUER: https://forgerock-am.service.core-compute-idam-prod2.internal:8443/openam/oauth2/realms/root/realms/hmcts
-        IDAM_API_URL: https://idam-api.platform.hmcts.net
-        IDAM_WEB_URL: https://hmcts-access.service.gov.uk
-        SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWKSETURI: https://hmcts-access.service.gov.uk/o/jwks
-        SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUERURI: https://forgerock-am.service.core-compute-idam-prod2.internal:8443/openam/oauth2/realms/root/realms/hmcts
-        MANAGE_CASE_UI_BASE_URL: https://manage-case.platform.hmcts.net
-        AUTH_IDAM_CLIENT_BASEURL: https://idam-api.platform.hmcts.net
-        DOCMOSIS_TORNADO_URL: https://docmosis.platform.hmcts.net
-        TESTING_SUPPORT_ENABLED: false
+        TESTING_SUPPORT_ENABLED: true
+        EM_CCD_ORCHESTRATOR_URL: http://em-ccdorc-demo.service.core-compute-demo.internal
         DOCUMENT_MANAGEMENT_SECURED: true
