--- a/apps/civil/civil-service/image-repo.yaml
+++ b/apps/civil/civil-service/image-repo.yaml
@@ -3,4 +3,6 @@ kind: ImageRepository
 metadata:
   name: civil-service
 spec:
+  java:
+    replicas: 2
   image: hmctspublic.azurecr.io/civil/service
