--- a/apps/civil/civil-service/ithc.yaml
+++ b/apps/civil/civil-service/ithc.yaml
@@ -1,11 +1,11 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: civil-general-applications
+  name: civil-service
+  namespace: civil
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/civil/general-applications:prod-2200d5d-20221003082031 #{"$imagepolicy": "flux-system:civil-general-applications"}
       keyVaults:
         civil:
           resourceGroup: civil
@@ -18,16 +18,17 @@ spec:
             - cross-access-user-password
             - prd-admin-user-username
             - prd-admin-user-password
-            - name: AppInsightsInstrumentationKeyGeneralApplications
-              alias: azure.application-insights.instrumentation-key
+            - AppInsightsInstrumentationKey
             - docmosis-api-key
             - cmc-db-password-v11
             - gov-notify-api-key
             - sendgrid-api-key
             - robotics-notification-sender
             - robotics-notification-recipient
+            - robotics-notification-recipient-spec
             - launch-darkly-sdk-key
             - robotics-notification-multipartyrecipient
             - ordnance-survey-api-key
       environment:
         TESTING_SUPPORT_ENABLED: true
+        EM_CCD_ORCHESTRATOR_URL: http://em-ccdorc-ithc.service.core-compute-demo.internal
