--- a/apps/civil/demo/base/kustomization.yaml
+++ b/apps/civil/demo/base/kustomization.yaml
@@ -8,8 +8,9 @@ resources:
   - ../../../rbac/nonprod-role.yaml
   - ../civil-citizen-ui/image-repo.yaml
   - ../civil-citizen-ui/image-policy.yaml
+  - ../civil-service/demo-image-policy.yaml
 patchesStrategicMerge:
-  - ../../identity/perftest.yaml
+  - ../../identity/ithc.yaml
   - ../../../xui/identity/aat.yaml
   - ../../../am/identity/aat.yaml
   - ../../../money-claims/identity/aat.yaml
