Only Civil Service in production

--- a/apps/civil/aat/base/kustomization.yaml
+++ b/apps/civil/aat/base/kustomization.yaml
@@ -6,6 +6,10 @@ resources:
   - ../../../am/identity/identity.yaml
   - ../../../money-claims/identity/identity.yaml
   - ../../../rbac/nonprod-role.yaml
+  - ../../civil-general-applications/image-repo.yaml
+  - ../../civil-general-applications/image-policy.yaml
+  - ../../civil-citizen-ui/image-repo.yaml
+  - ../../civil-citizen-ui/image-policy.yaml
 patchesStrategicMerge:
   - ../../identity/aat.yaml
   - ../../../xui/identity/aat.yaml
