--- a/apps/civil/demo/base/kustomization.yaml
+++ b/apps/civil/demo/base/kustomization.yaml
@@ -7,6 +7,10 @@ resources:
   - ../../../money-claims/identity/identity.yaml
   - ../../../rbac/nonprod-role.yaml
   - ../../civil-service/demo-image-policy.yaml
+  - ../../civil-general-applications/image-repo.yaml
+  - ../../civil-general-applications/image-policy.yaml
+  - ../../civil-citizen-ui/image-repo.yaml
+  - ../../civil-citizen-ui/image-policy.yaml
 patchesStrategicMerge:
   - ../../identity/ithc.yaml
   - ../../../xui/identity/aat.yaml
