div-da prod files

--- a/apps/divorce/prod/base/kustomization.yaml
+++ b/apps/divorce/prod/base/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ../../base
 namespace: divorce
 patchesStrategicMerge:
+  - ../../div-da/prod.yaml
   - ../../div-fps/prod.yaml
   - ../../div-emca/prod.yaml
   - ../../div-cms/prod.yaml
