--- a/apps/divorce/div-da/prod.yaml
+++ b/apps/divorce/div-da/prod.yaml
@@ -1,9 +1,9 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: div-da
+  namespace: divorce
 spec:
-  releaseName: div-da
   values:
     nodejs:
       ingressHost: www.decree-absolute.apply-divorce.service.gov.uk
