adding document management secured true
adding missing vault to aat

--- a/k8s/namespaces/civil/civil-general-applications/demo.yaml
+++ b/k8s/namespaces/civil/civil-general-applications/demo.yaml
@@ -31,3 +31,4 @@ spec:
             - ordnance-survey-api-key
       environment:
         TESTING_SUPPORT_ENABLED: true
+        DOCUMENT_MANAGEMENT_SECURED: true
