--- a/k8s/namespaces/sscs/sscs-case-loader/aat-00.yaml
+++ b/k8s/namespaces/sscs/sscs-case-loader/aat-00.yaml
@@ -7,7 +7,7 @@ spec:
   values:
     job:
       schedule: "0/10 * * * *"
-      image: hmctspublic.azurecr.io/sscs/case-loader:prod-5436fc2-20220622124818 #{"$imagepolicy": "flux-system:sscs-case-loader"}
+      image: hmctspublic.azurecr.io/sscs/case-loader:prod-5436fc2-20220622124818
       environment:
         TEST_PROPERTY: true
         DUMMY_RESTART_VAR: true
