--- a/k8s/namespaces/rd/rd-caseworker-ref-api/demo.yaml
+++ b/k8s/namespaces/rd/rd-caseworker-ref-api/demo.yaml
@@ -9,3 +9,4 @@ spec:
         DELETE_CWR: false
         CRD_S2S_AUTHORISED_SERVICES: rd_caseworker_ref_api,am_org_role_mapping_service,iac,xui_webapp
         STAFF_DATA_FILE_VERSION: v1.15
+        EMAIL_DOMAIN_LIST: justice.gov.uk,DWP.GOV.UK,hmrc.gov.uk
