--- a/k8s/namespaces/private-law/prl-cos/ithc.yaml
+++ b/k8s/namespaces/private-law/prl-cos/ithc.yaml
@@ -15,7 +15,7 @@ spec:
       readinessTimeout: 15
       readinessPeriod: 15
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/prl/cos:prod-e3b75e3-20220930145502 #{"$imagepolicy": "flux-system:prl-cos"}
+      image: hmctspublic.azurecr.io/prl/cos:pr-505-2f3bcff-20220928233328 #{"$imagepolicy": "flux-system:demo-prl-cos-api"}
       environment:
         FEATURE_EXAMPLE: true
         PRD_API_BASEURL: http://rd-professional-api-ithc.service.core-compute-ithc.internal
