--- a/apps/private-law/prl-citizen-frontend/ithc-image-policy.yaml
+++ b/apps/private-law/prl-citizen-frontend/ithc-image-policy.yaml
@@ -1,15 +1,15 @@
 apiVersion: image.toolkit.fluxcd.io/v1alpha2
 kind: ImagePolicy
 metadata:
-  name: demo-prl-cos-api
+  name: ithc-prl-citizen-frontend
   annotations:
     hmcts.github.com/prod-automated: disabled
 spec:
   filterTags:
-    pattern: '^pr-572-[a-f0-9]+-(?P<ts>[0-9]+)'
+    pattern: '^pr-220-[a-f0-9]+-(?P<ts>[0-9]+)'
     extract: '$ts'
   policy:
     alphabetical:
       order: asc
   imageRepositoryRef:
-    name: prl-cos-api
+    name: prl-citizen-frontend
