--- a/apps/private-law/prl-cos/ithc-image-policy.yaml
+++ b/apps/private-law/prl-cos/ithc-image-policy.yaml
@@ -1,12 +1,12 @@
 apiVersion: image.toolkit.fluxcd.io/v1alpha2
 kind: ImagePolicy
 metadata:
-  name: demo-prl-cos-api
+  name: ithc-prl-cos-api
   annotations:
     hmcts.github.com/prod-automated: disabled
 spec:
   filterTags:
-    pattern: '^pr-572-[a-f0-9]+-(?P<ts>[0-9]+)'
+    pattern: '^pr-505-[a-f0-9]+-(?P<ts>[0-9]+)'
     extract: '$ts'
   policy:
     alphabetical:
