Point Demo image from Prod to PR

--- a/apps/rd/automation/kustomization.yaml
+++ b/apps/rd/automation/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ../rd-caseworker-ref-api/demo-image-policy.yaml
   - ../rd-caseworker-ref-api-integration/image-repo.yaml
   - ../rd-caseworker-ref-api-integration/image-policy.yaml
+  - ../rd-caseworker-ref-api/demo-image-policy.yaml
   - ../rd-user-profile-api-integration/image-repo.yaml
   - ../rd-user-profile-api-integration/image-policy.yaml
   - ../rd-professional-api-integration/image-repo.yaml
