--- a/k8s/perftest/common-overlay/divorce/kustomization.yaml
+++ b/k8s/perftest/common-overlay/divorce/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
 - ../../../namespaces/divorce
 - ../../../namespaces/divorce/namespace.yaml
 - ../../../namespaces/all-namespaces/nonprod-role.yaml
+- ../../../namespaces/divorce/div-dgs/div-dgs.yaml
 patchesStrategicMerge:
 - ../../../namespaces/divorce/div-dgs/perftest.yaml
 patchesJson6902:
