--- a/k8s/namespaces/private-law/prl-dgs/ithc.yaml
+++ b/k8s/namespaces/private-law/prl-dgs/ithc.yaml
@@ -19,7 +19,7 @@ spec:
       readinessTimeout: 15
       readinessPeriod: 10
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/prl/dgs:pr-99-663785f-20220617140259 #{"$imagepolicy": "flux-system:demo-prl-dgs-api"}
+      image: hmctspublic.azurecr.io/prl/dgs:prod-0d0fe92-20220930145427 #{"$imagepolicy": "flux-system:prl-dgs"}
       environment:
         FEATURE_EXAMPLE: true
     global:
