Kustomise oauth dns records

--- a/apps/admin/oauth2-proxy/demo/01-oauth2-proxy.yaml
+++ b/apps/admin/oauth2-proxy/demo/01-oauth2-proxy.yaml
@@ -7,8 +7,8 @@ spec:
   values:
     extraArgs:
       cookie-domain: ".demo.platform.hmcts.net"
-      redirect-url: https://oauth-proxy.demo.platform.hmcts.net/oauth-proxy/callback
+      redirect-url: https://cft-oauth-proxy-01.demo.platform.hmcts.net/oauth-proxy/callback
       whitelist-domain: ".demo.platform.hmcts.net"
     ingress:
       hosts:
-        - oauth-proxy.demo.platform.hmcts.net
+        - cft-oauth-proxy-01.demo.platform.hmcts.net
