--- a/apps/admin/traefik2-auth/demo/01.yaml
+++ b/apps/admin/traefik2-auth/demo/01.yaml
@@ -9,3 +9,13 @@ spec:
     kubernetes:
       ingressEndpoint:
         ip: 51.142.81.236
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: oauth-auth
+  namespace: admin
+spec:
+  forwardAuth:
+    # May need a new DNS record for this -- see ticket description
+    address: https://cft-oauth-proxy-01.demo.platform.hmcts.net/oauth-proxy/auth_or_start
