--- a/apps/civil/aat/base/kustomization.yaml
+++ b/apps/civil/aat/base/kustomization.yaml
@@ -6,10 +6,8 @@ resources:
   - ../../../am/identity/identity.yaml
   - ../../../money-claims/identity/identity.yaml
   - ../../../rbac/nonprod-role.yaml
-  - ../../civil-general-applications/image-repo.yaml
-  - ../../civil-general-applications/image-policy.yaml
-  - ../../civil-citizen-ui/image-repo.yaml
-  - ../../civil-citizen-ui/image-policy.yaml
+  - ../civil-general-applications/civil-general-applications.yaml
+  - ../civil-citizen-ui/civil-citizen-ui.yaml
 patchesStrategicMerge:
   - ../../identity/aat.yaml
   - ../../../xui/identity/aat.yaml
