Add demo cert secret provider

--- a/apps/admin/demo/01/kustomization.yaml
+++ b/apps/admin/demo/01/kustomization.yaml
@@ -21,3 +21,4 @@ patchesStrategicMerge:
   - ../../traefik2-no-proxy/demo/01.yaml
   - ../../traefik2-auth/demo/01.yaml
   - ../../oauth2-proxy/demo/01-oauth2-proxy.yaml
+  - ../../traefik2/demo/secret-provider.yaml
