--- a/apps/divorce/ithc/base/kustomization.yaml
+++ b/apps/divorce/ithc/base/kustomization.yaml
@@ -2,8 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../div-dgs/div-dgs.yaml
 namespace: divorce
 patchesStrategicMerge:
+  - ../../div-dgs/ithc.yaml
   - ../../div-da/ithc.yaml
   - ../../div-fps/ithc.yaml
   - ../../div-emca/ithc.yaml
