div-dgs prod files

--- a/apps/divorce/div-dgs/prod.yaml
+++ b/apps/divorce/div-dgs/prod.yaml
@@ -1,9 +1,9 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: div-dgs
+  namespace: divorce
 spec:
-  releaseName: div-dgs
   values:
     java:
       memoryRequests: "768Mi"
@@ -20,4 +20,3 @@ spec:
         DOCMOSIS_SERVICE_DEV_MODE_FLAG: "false"
         PDF_TEST_ENABLED: "false"
         TEMP_ENV: "false"
-
