--- a/k8s/namespaces/xui/xui-webapp/perftest.yaml
+++ b/k8s/namespaces/xui/xui-webapp/perftest.yaml
@@ -16,7 +16,8 @@ spec:
       cpuRequests: "1000m"
       ingressHost: manage-case.perftest.platform.hmcts.net
       environment:
-        JURISDICTIONS: DIVORCE,PROBATE,FR,PUBLICLAW,IA,SSCS,CMC,EMPLOYMENT,CIVIL,HRS,BEFTA_JURISDICTION_1,BEFTA_JURISDICTION_2,PRIVATELAW,BEFTA_JURISDICTION_3,DISPOSER_MASTER FEATURE_TERMS_AND_CONDITIONS_ENABLED: false
+        JURISDICTIONS: DIVORCE,PROBATE,FR,PUBLICLAW,IA,SSCS,CMC,EMPLOYMENT,CIVIL,HRS,BEFTA_JURISDICTION_1,BEFTA_JURISDICTION_2,PRIVATELAW,BEFTA_JURISDICTION_3,DISPOSER_MASTER
+        FEATURE_TERMS_AND_CONDITIONS_ENABLED: false
         DEBUG: xuiNode:*,-xuiNode:auth:s2s
         SERVICES_IDAM_OAUTH_CALLBACK_URL: /oauth2/callback
         SERVICES_PRD_API: http://rd-professional-api-perftest.service.core-compute-perftest.internal
