--- a/apps/divorce/div-dgs/demo.yaml
+++ b/apps/divorce/div-dgs/demo.yaml
@@ -13,3 +13,4 @@ spec:
         DOCMOSIS_SERVICE_BASE_URL: "https://docmosis.demo.platform.hmcts.net"
         DOCMOSIS_SERVICE_DEV_MODE_FLAG: "true"
         PDF_TEST_ENABLED: "true"
+        VAR_TEST: test1
