--- a/apps/divorce/div-dgs/prod.yaml
+++ b/apps/divorce/div-dgs/prod.yaml
@@ -19,4 +19,4 @@ spec:
         FEATURE_RESP_SOLICITOR_DETAILS: "true"
         DOCMOSIS_SERVICE_DEV_MODE_FLAG: "false"
         PDF_TEST_ENABLED: "false"
-        TEMP_ENV: "false"
+        TEMP_ENV: "false2"
