--- a/k8s/namespaces/fees-pay/ccpay-bulkscanning-api-int/demo.yaml
+++ b/k8s/namespaces/fees-pay/ccpay-bulkscanning-api-int/demo.yaml
@@ -11,3 +11,4 @@ spec:
       environment:
         DUMMY_RESTART_VAR: true
         IDAM_API_URL: "https://idam-api.demo.platform.hmcts.net"
+        POSTGRES_NAME: postgresqldb2
