--- a/k8s/namespaces/fees-pay/ccpay-refunds-api-int/demo.yaml
+++ b/k8s/namespaces/fees-pay/ccpay-refunds-api-int/demo.yaml
@@ -8,6 +8,7 @@ spec:
       image: hmctspublic.azurecr.io/ccpay/refunds-api:pr-258-cf51cb8-20221003152755 #{"$imagepolicy": "flux-system:demo-int-ccpay-refunds-api"}
       environment:
         DUMMY_VARIABLE: true
+        POSTGRES_NAME: postgresqldb2
         LIBERATA_BASE_URL: "https://lascustomerportaluat.liberata.com"
         PAYMENT_API_URL: "http://payment-api-int-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
         NOTIFICATION_API_URL: "http://ccpay-notifications-service-int-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
