--- a/k8s/namespaces/rpe/rpe-send-letter-service/demo.yaml
+++ b/k8s/namespaces/rpe/rpe-send-letter-service/demo.yaml
@@ -6,6 +6,7 @@ spec:
   values:
     java:
       environment:
-        ENCRYPTION_ENABLED: false
+        ENCRYPTION_ENABLED: true
+        FILE_CLEANUP_ENABLED: false
         CIVIL_SERVICE_ENABLED: true
         REFRESH_PODS: true
