--- a/k8s/namespaces/rpe/rpe-send-letter-service/demo.yaml
+++ b/k8s/namespaces/rpe/rpe-send-letter-service/demo.yaml
@@ -9,4 +9,4 @@ spec:
         ENCRYPTION_ENABLED: true
         FILE_CLEANUP_ENABLED: false
         CIVIL_SERVICE_ENABLED: true
-        REFRESH_PODS: true
+        REFRESH_PODS: "yes"
