Created demo 'base'
Update kustomization.yaml

Update kustomization.yaml

Update kustomization.yaml

Update demo.yaml

--- a/apps/et/demo/base/kustomization.yaml
+++ b/apps/et/demo/base/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../et-sya-api/et-sya-api.yaml
-  - ../../et-sya/et-sya.yaml
+  - ../../et-sya/et-sya-demo.yaml
 namespace: et
 patchesStrategicMerge:
   - ../../identity/demo.yaml
