--- a/apps/dtsse/aat/00/kustomization.yaml
+++ b/apps/dtsse/aat/00/kustomization.yaml
@@ -5,3 +5,4 @@ resources:
   - ../base
 patchesStrategicMerge:
   - ../../dtsse-dashboard-github-ingestion/aat/00.yaml
+  - ../../dtsse-dashboard-jira-ingestion/aat/00.yaml
