--- a/apps/dtsse/aat/base/kustomization.yaml
+++ b/apps/dtsse/aat/base/kustomization.yaml
@@ -4,5 +4,6 @@ namespace: dtsse
 resources:
   - ../../base
   - ../../dtsse-dashboard-github-ingestion/dtsse-dashboard-github-ingestion.yaml
+  - ../../dtsse-dashboard-jira-ingestion/dtsse-dashboard-jira-ingestion.yaml
 patchesStrategicMerge:
   - ../../identity/aat.yaml
