--- a/k8s/namespaces/am/am-org-role-mapping-service/demo.yaml
+++ b/k8s/namespaces/am/am-org-role-mapping-service/demo.yaml
@@ -8,3 +8,4 @@ spec:
       environment:
         AM_INFO: true
         APPLICATION_LOGGING_LEVEL: DEBUG
+        ROLE_ASSIGNMENT_S2S_AUTHORISED_SERVICES: am_role_assignment_service,am_org_role_mapping_service,am_role_assignment_refresh_batch,xui_webapp
