--- a/k8s/namespaces/am/am-org-role-mapping-service/demo.yaml
+++ b/k8s/namespaces/am/am-org-role-mapping-service/demo.yaml
@@ -6,6 +6,6 @@ spec:
   values:
     java:
       environment:
-        AM_INFO: true
+        AM_INFO: false
         APPLICATION_LOGGING_LEVEL: DEBUG
-        ROLE_ASSIGNMENT_S2S_AUTHORISED_SERVICES: am_role_assignment_service,am_org_role_mapping_service,am_role_assignment_refresh_batch,xui_webapp
+        AM_ORG_ROLE_MAPPING_S2S_AUTHORISED_SERVICES: ccd_gw,am_role_assignment_service,am_org_role_mapping_service,am_role_assignment_refresh_batch,xui_webapp
