Add 00 kustomisation for when it's needed

--- a/apps/admin/oauth2-proxy/oauth2-proxy.yaml
+++ b/apps/admin/oauth2-proxy/oauth2-proxy.yaml
@@ -18,6 +18,8 @@ spec:
   interval: 1m
   values:
     extraArgs:
+      cookie-domain: ".demo.platform.hmcts.net"
+      whitelist-domain: ".demo.platform.hmcts.net"
       email-domain: "*"
       pass-basic-auth: false
       pass-host-header: true
