--- a/k8s/namespaces/fact/fact-admin/demo.yaml
+++ b/k8s/namespaces/fact/fact-admin/demo.yaml
@@ -6,5 +6,6 @@ spec:
   values:
     nodejs:
       disableTraefikTls: false
+      image: hmctspublic.azurecr.io/fact/fact-admin:pr-578
       environment:
         NODE_ENV: development
