Add prod flux v1 back

--- a/k8s/namespaces/civil/civil-citizen-ui/civil-citizen-ui.yaml
+++ b/k8s/namespaces/civil/civil-citizen-ui/civil-citizen-ui.yaml
@@ -24,3 +24,4 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/civil/citizen-ui:prod-8b81996-20221006110050 #{"$imagepolicy": "flux-system:civil-citizen-ui"}
       environment:
+        TEST_PROPERTY: TEST_VALUE_OVERIDDEN
