--- a/k8s/aat/common-overlay/probate/kustomization.yaml
+++ b/k8s/aat/common-overlay/probate/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
 - ../../../namespaces/probate
 - ../../../namespaces/probate/namespace.yaml
 - ../../../namespaces/all-namespaces/nonprod-role.yaml
+- ../../../namespaces/probate/probate-caveats-fe/probate-caveats-fe.yaml
 patchesStrategicMerge:
 - ../../../namespaces/probate/probate-caveats-fe/aat.yaml
 - ../../../namespaces/probate/probate-frontend/aat.yaml
