--- a/k8s/prod/common-overlay/probate/kustomization.yaml
+++ b/k8s/prod/common-overlay/probate/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: probate
 bases:
 - ../../../namespaces/probate
 - ../../../namespaces/probate/namespace.yaml
+- ../../../namespaces/probate/probate-caveats-fe/probate-caveats-fe.yaml
 patchesStrategicMerge:
 - ../../../namespaces/probate/probate-business-service/prod.yaml
 - ../../../namespaces/probate/probate-caveats-fe/prod.yaml
