--- a/apps/admin/external-dns-2/demo/00-external-dns-private.yaml
+++ b/apps/admin/external-dns-2/demo/00-external-dns-private.yaml
@@ -1,10 +1,10 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: external-dns
+  name: external-dns-private-2
   namespace: admin
 spec:
-  releaseName: external-dns
+  releaseName: external-dns-private
   values:
     logLevel: debug
-    txtOwnerId: cft-demo-aks-active
+    txtOwnerId: cft-demo-aks-inactive
