--- a/k8s/namespaces/fees-pay/pba-payment-job-int/demo.yaml
+++ b/k8s/namespaces/fees-pay/pba-payment-job-int/demo.yaml
@@ -8,9 +8,9 @@ spec:
   values:
     job:
       image: "hmctspublic.azurecr.io/payment/jobs:pr-44-15cfff7-20221007115353" #{"$imagepolicy": "flux-system:demo-int-pba-csv-report"}
-      schedule: "30 2 * * *"
+      schedule: "*/30 * * * *"
       environment:
-        DUMMY_RESTART_VAR: true
+        DUMMY_RESTART_VAR: false
         PAYMENT_SERVER_URL: http://payment-api-int-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     global:
       environment: demo
