--- a/k8s/namespaces/private-law/prl-citizen-frontend/aat.yaml
+++ b/k8s/namespaces/private-law/prl-citizen-frontend/aat.yaml
@@ -30,6 +30,7 @@ spec:
             - idam-solicitor-password
             - launchDarkly-sdk-key
             - citizen-upload-docs-email
+            - redis-access-key
       environment:
         IDAM_API_URL: https://idam-api.aat.platform.hmcts.net/o/token
         IDAM_WEB_URL: https://idam-web-public.aat.platform.hmcts.net/login
