--- a/k8s/namespaces/private-law/prl-citizen-frontend/demo.yaml
+++ b/k8s/namespaces/private-law/prl-citizen-frontend/demo.yaml
@@ -39,6 +39,7 @@ spec:
             - idam-solicitor-password
             - launchDarkly-sdk-key
             - citizen-upload-docs-email
+            - redis-access-key
       environment:
         IDAM_API_URL: https://idam-api.demo.platform.hmcts.net/o/token
         IDAM_WEB_URL: https://idam-web-public.demo.platform.hmcts.net/login
