--- a/k8s/namespaces/private-law/prl-citizen-frontend/demo.yaml
+++ b/k8s/namespaces/private-law/prl-citizen-frontend/demo.yaml
@@ -49,6 +49,7 @@ spec:
         CCD_URL: http://ccd-data-store-api-demo.service.core-compute-demo.internal
         CDAM_API_URL: http://ccd-case-document-am-api-demo.service.core-compute-demo.internal
         COS_URL: http://prl-cos-demo.service.core-compute-demo.internal
+        REDIS_HOST: http://prl-citizen-frontend-session-storage-demmo.redis.cache.windows.net
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
