--- a/k8s/namespaces/private-law/prl-citizen-frontend/aat.yaml
+++ b/k8s/namespaces/private-law/prl-citizen-frontend/aat.yaml
@@ -40,7 +40,7 @@ spec:
         CCD_URL: http://ccd-data-store-api-aat.service.core-compute-aat.internal
         CDAM_API_URL: http://ccd-case-document-am-api-aat.service.core-compute-aat.internal
         COS_URL: http://prl-cos-aat.service.core-compute-aat.internal
-        REDIS_HOST: http://prl-citizen-frontend-session-storage-aat.redis.cache.windows.net
+        REDIS_HOST: prl-citizen-frontend-redis-aat.redis.cache.windows.net
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
