--- a/k8s/namespaces/private-law/prl-citizen-frontend/ithc.yaml
+++ b/k8s/namespaces/private-law/prl-citizen-frontend/ithc.yaml
@@ -40,7 +40,7 @@ spec:
         CCD_URL: http://ccd-data-store-api-ithc.service.core-compute-ithc.internal
         CDAM_API_URL: http://ccd-case-document-am-api-ithc.service.core-compute-ithc.internal
         COS_URL: http://prl-cos-ithc.service.core-compute-ithc.internal
-        REDIS_HOST: http://prl-citizen-frontend-session-storage-ithc.redis.cache.windows.net
+        REDIS_HOST: prl-citizen-frontend-redis-ithc.redis.cache.windows.net
     global:
       environment: ithc
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
