--- a/k8s/namespaces/private-law/prl-citizen-frontend/perftest.yaml
+++ b/k8s/namespaces/private-law/prl-citizen-frontend/perftest.yaml
@@ -40,7 +40,7 @@ spec:
         CCD_URL: http://ccd-data-store-api-perftest.service.core-compute-perftest.internal
         CDAM_API_URL: http://ccd-case-document-am-api-perftest.service.core-compute-perftest.internal
         COS_URL: http://prl-cos-perftest.service.core-compute-perftest.internal
-        REDIS_HOST: http://prl-citizen-frontend-session-storage-perftest.redis.cache.windows.net
+        REDIS_HOST: prl-citizen-frontend-redis-perftest.redis.cache.windows.net
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
