--- a/apps/em/em-ccd-orchestrator/demo-image-policy.yaml
+++ b/apps/em/em-ccd-orchestrator/demo-image-policy.yaml
@@ -7,8 +7,8 @@ metadata:
 #    hmcts.github.com/prod-automated: disabled
 spec:
   filterTags:
-    pattern: '^prod-[a-f0-9]+-(?P<ts>[0-9]+)'
-#    pattern: '^pr-953-[a-f0-9]+-(?P<ts>[0-9]+)'
+    #pattern: '^prod-[a-f0-9]+-(?P<ts>[0-9]+)'
+    pattern: '^pr-970-[a-f0-9]+-(?P<ts>[0-9]+)'
     extract: '$ts'
   policy:
     alphabetical:
