EM-3699 deploy pr-970

--- a/k8s/namespaces/em/em-ccd-orchestrator/demo.yaml
+++ b/k8s/namespaces/em/em-ccd-orchestrator/demo.yaml
@@ -3,13 +3,13 @@ kind: HelmRelease
 metadata:
   name: em-ccd-orchestrator
   annotations:
-    flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:pr-970-*
+    fluxcd.io/automated: "true"
+    fluxcd.io/tag.java: glob:pr-970-*
     hmcts.github.com/prod-automated: disabled
-spec:
+spec:ƒ
   values:
     java:
       ingressHost: em-ccdorc-demo.service.core-compute-demo.internal
-      image: hmctspublic.azurecr.io/em/ccdorc:prod-5bd2982-20221007144953 #{"$imagepolicy": "flux-system:demo-em-ccd-orchestrator"}
+      image: hmctspublic.azurecr.io/em/ccdorc:pr-970-6bbebc2-20221007145754 #{"$imagepolicy": "flux-system:demo-em-ccd-orchestrator"}
       environment:
         CALLBACK_DOMAIN: em-ccdorc-demo.service.core-compute-demo.internal
