EM-3699 deploy pr-970

--- a/k8s/namespaces/em/em-ccd-orchestrator/demo.yaml
+++ b/k8s/namespaces/em/em-ccd-orchestrator/demo.yaml
@@ -6,7 +6,7 @@ metadata:
     fluxcd.io/automated: "true"
     fluxcd.io/tag.java: glob:pr-970-*
     hmcts.github.com/prod-automated: disabled
-spec:ƒ
+spec:
   values:
     java:
       ingressHost: em-ccdorc-demo.service.core-compute-demo.internal
