--- a/apps/admin/demo/01/kustomization.yaml
+++ b/apps/admin/demo/01/kustomization.yaml
@@ -20,5 +20,5 @@ patchesStrategicMerge:
   - ../../traefik2/demo/traefik-private.yaml
   - ../../traefik2-no-proxy/demo/01.yaml
   - ../../traefik2-auth/demo/01.yaml
-  - ../../oauth2-proxy/demo/01-oauth2-proxy.yaml
+  - ../../oauth2-proxy/demo/01.yaml
   - ../../traefik2/demo/secret-provider.yaml
