Add MI patch to demo/base

--- a/apps/admin/demo/01/kustomization.yaml
+++ b/apps/admin/demo/01/kustomization.yaml
@@ -22,3 +22,4 @@ patchesStrategicMerge:
   - ../../traefik2-auth/demo/01.yaml
   - ../../oauth2-proxy/demo/01.yaml
   - ../../traefik2/demo/secret-provider.yaml
+  - ../../aad-pod-id/mi/demo/azure-identity-patch.yaml
