Switch active txtOwnerId

--- a/apps/admin/external-dns-2/demo/00-external-dns.yaml
+++ b/apps/admin/external-dns-2/demo/00-external-dns.yaml
@@ -7,4 +7,4 @@ spec:
   releaseName: external-dns
   values:
     logLevel: debug
-    txtOwnerId: cft-demo-aks-inactive
+    txtOwnerId: cft-demo-aks-active
