--- a/k8s/namespaces/fis/kustomization.yaml
+++ b/k8s/namespaces/fis/kustomization.yaml
@@ -6,4 +6,5 @@ bases:
 - fis-ds-web/fis-ds-web.yaml
 - fis-bulk-scan-api/fis-bulk-scan-api.yaml
 - fis-cos-api/fis-cos-api.yaml
+- fis-hmc-api/fis-hmc-api.yaml
 # Warning : Adding a file here, adds to all environments to which you add your kustomization.
