--- a/apps/probate/probate-caveats-fe/probate-caveats-fe.yaml
+++ b/apps/probate/probate-caveats-fe/probate-caveats-fe.yaml
@@ -11,7 +11,7 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/probate/caveats-fe:prod-07c23f2-20221007104122 #{"$imagepolicy": "flux-system:probate-caveats-fe"}
       environment:
-        VAR_TA: trig-base-1
+        VAR_FV2: trig-base-1
   chart:
     spec:
       chart: ./stable/probate-caveats-fe
