--- a/k8s/namespaces/fis/fis-hmc-api/fis-hmc-api.yaml
+++ b/k8s/namespaces/fis/fis-hmc-api/fis-hmc-api.yaml
@@ -23,6 +23,6 @@ spec:
       readinessTimeout: 5
       readinessPeriod: 15
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/fis/hmc-api:prod-0468e73-20221006171923 #{"$imagepolicy": "flux-system:fis-hmc"}
+      image: hmctspublic.azurecr.io/fis/hmc-api:prod-0468e73-20221006171923 #{"$imagepolicy": "flux-system:fis-hmc-api"}
       environment:
         FEATURE_EXAMPLE: true
