--- a/k8s/namespaces/xui/xui-webapp-wa-integration/demo.yaml
+++ b/k8s/namespaces/xui/xui-webapp-wa-integration/demo.yaml
@@ -27,4 +27,5 @@ spec:
         SERVICES_JUDICIAL_BOOKING_API_PATH: http://am-judicial-booking-service-demo.service.core-compute-demo.internal
         SERVICES_WA_WORKFLOW_API_URL: http://wa-workflow-api-demo.service.core-compute-demo.internal
         FEATURE_ACCESS_MANAGEMENT_ENABLED: true
+        SERVICES_ROLE_ASSIGNMENT_MAPPING_API_PATH: http://am-org-role-mapping-service-demo.service.core-compute-demo.internal
       image: hmctspublic.azurecr.io/xui/webapp:pr-1774-dd6bb65-20221010092520 #{"$imagepolicy": "flux-system:demo-xui-webapp-wa-integration"}
