Refactor attempt, one external-dns HR

--- a/apps/admin/demo/01/kustomization.yaml
+++ b/apps/admin/demo/01/kustomization.yaml
@@ -8,13 +8,15 @@ resources:
   - ../../traefik2-no-proxy
   - ../../traefik2-auth
   - ../../external-dns-2/
+  - ../../external-dns-2/external-dns-public
+  - ../../external-dns-2/external-dns-private
   - ../../aad-pod-id/mi
   - ../../oauth2-proxy
-  - ../../external-dns-2/demo/external-dns.yaml
 
 patchesStrategicMerge:
-  - ../../external-dns-2/demo/01-external-dns.yaml
   - ../../external-dns-2/demo/external-dns-private.yaml
+  - ../../external-dns-2/demo/external-dns.yaml
+  - ../../external-dns-2/demo/01-external-dns.yaml
   - ../../external-dns-2/demo/01-external-dns-private.yaml
   - ../../traefik2/demo/01.yaml
   - ../../traefik2/demo/traefik-private.yaml
