--- a/apps/admin/external-dns-2/kustomization.yaml
+++ b/apps/admin/external-dns-2/kustomization.yaml
@@ -3,5 +3,5 @@ namespace: admin
 kind: Kustomization
 resources:
   - external-dns-helmrepo.yaml
-  - external-dns-private.yaml
+  - external-dns.yaml
   - identity-binding.yaml
