--- a/apps/admin/external-dns-2/demo/00-external-dns.yaml
+++ b/apps/admin/external-dns-2/demo/00-external-dns.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: external-dns
+  name: external-dns-public
   namespace: admin
 spec:
   releaseName: external-dns
