--- a/apps/admin/external-dns-2/external-dns-private/external-dns-private.yaml
+++ b/apps/admin/external-dns-2/external-dns-private/external-dns-private.yaml
@@ -1,10 +1,9 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: external-dns-private
+  name: external-dns
   namespace: admin
 spec:
   releaseName: external-dns-private
   values:
-    logLevel: debug
-    txtOwnerId: cft-demo-aks-active
+    provider: azure-private-dns
