Deploy bulk-scan-processor PR-2648

--- a/k8s/namespaces/bsp/bulk-scan-processor/demo.yaml
+++ b/k8s/namespaces/bsp/bulk-scan-processor/demo.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   values:
     java:
+      image: hmctspublic.azurecr.io/bulk-scan/processor:pr-2648-a314ceb-20221010151412
       environment:
         #60 days in seconds
         SAS_TOKEN_VALIDITY: "5184000"
