--- a/apps/admin/traefik2/ptl-intsvc/secret-provider.yaml
+++ b/apps/admin/traefik2/ptl-intsvc/secret-provider.yaml
@@ -5,11 +5,11 @@ metadata:
   namespace: admin
 spec:
   parameters:
-    keyvaultName: acmedcdcftappssbox
+    keyvaultName: acmedcdcftapps<env>
     objects: |
       array:
         - |
-          objectName: wildcard-sandbox-platform-hmcts-net
+          objectName: <wildcard-<>-platform-hmcts-net>
           objectType: secret
           objectAlias: tls-cert
           objectVersion: ""
