--- a/apps/admin/traefik2/ptl-intsvc/secret-provider.yaml
+++ b/apps/admin/traefik2/ptl-intsvc/secret-provider.yaml
@@ -5,11 +5,12 @@ metadata:
   namespace: admin
 spec:
   parameters:
-    keyvaultName: acmedcdcftapps<env>
+    keyvaultName: acmedcdcftappsprod
+
     objects: |
       array:
         - |
-          objectName: <wildcard-<>-platform-hmcts-net>
+          objectName: wildcard-platform-hmcts-net
           objectType: secret
           objectAlias: tls-cert
           objectVersion: ""
