Refactor traefik into one helm release and use namesuffix

--- a/apps/admin/traefik2-auth/demo/00.yaml
+++ b/apps/admin/traefik2-auth/demo/00.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: traefik-auth-proxy
+  name: traefik2-auth-proxy
   namespace: admin
 spec:
   values:
