--- a/apps/admin/traefik2-auth/kustomization.yaml
+++ b/apps/admin/traefik2-auth/kustomization.yaml
@@ -1,8 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+nameSuffix: -auth-proxy 
 resources:
-  - traefik-auth-proxy.yaml
   - oauth-auth.yaml
   - oauth-errors.yaml
   - oauth-headers.yaml
   - oauth-routes.yaml
+  - ../traefik2/traefik2.yaml
+patchesStrategicMerge:
+  - traefik-auth-proxy.yaml
