--- a/apps/admin/traefik2-auth/traefik-auth-proxy.yaml
+++ b/apps/admin/traefik2-auth/traefik-auth-proxy.yaml
@@ -1,21 +1,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: traefik-auth-proxy
+  name: traefik2
   namespace: admin
   annotations:
     flux.weave.works/automated: "false"
 spec:
   releaseName: traefik-auth-proxy
-  chart:
-    spec:
-      chart: traefik
-      # update the crd version in traefik-crds when updating this
-      version: 10.24.0
-      sourceRef:
-        kind: HelmRepository
-        name: traefik
-        namespace: admin
   interval: 1m
   values:
     ports:
@@ -28,43 +19,6 @@ spec:
     ingressClass:
       enabled: true
       isDefaultClass: false
-    deployment:
-      podLabels:
-        aadpodidbinding: traefik
-      additionalVolumes:
-        - name: traefik-default-cert
-          csi:
-            driver: secrets-store.csi.k8s.io
-            readOnly: true
-            volumeAttributes:
-              secretProviderClass: traefik-default-cert
-    additionalVolumeMounts:
-      - name: traefik-default-cert
-        mountPath: "/mnt/certs"
-        readOnly: true
-    service:
-      annotations:
-        service.beta.kubernetes.io/azure-load-balancer-internal: "true"
     logs:
       access:
         enabled: true
-    rbac:
-      enabled: true
-    autoscaling:
-      minReplicas: 2
-      maxReplicas: 4
-    tolerations:
-      - key: CriticalAddonsOnly
-        operator: Equal
-        value: "true"
-        effect: NoSchedule
-    affinity:
-      nodeAffinity:
-        preferredDuringSchedulingIgnoredDuringExecution:
-          - weight: 1
-            preference:
-              matchExpressions:
-                - key: kubernetes.azure.com/mode
-                  operator: In
-                  values:
-                    - system
