--- a/apps/admin/traefik2-no-proxy/kustomization.yaml
+++ b/apps/admin/traefik2-no-proxy/kustomization.yaml
@@ -1,4 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+nameSuffix: -no-proxy
 resources:
+  - ../traefik2/traefik2.yaml
+patchesStrategicMerge:
   - traefik2-no-proxy.yaml
