--- a/apps/aso/aso.yaml
+++ b/apps/aso/aso.yaml
@@ -10,7 +10,7 @@ spec:
     ref: main
     path: v2/charts/azure-service-operator
   values:
-    servivceName: azure-service-operator
+    serviceName: azure-service-operator
   # dependencies:
   #   - name: cert-manager
   #     version: v1.9.1
