--- a/apps/aso/base/kustomization.yaml
+++ b/apps/aso/base/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
-  - ../aso.yaml
+  - ../aso/aso.yaml
 namespace: aso
