Adds team channel

--- a/apps/aso/base/kustomize.yaml
+++ b/apps/aso/base/kustomize.yaml
@@ -5,3 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   path: ./apps/aso/${ENVIRONMENT}/base
+  postBuild:
+    substitute:
+      NAMESPACE: "aso"
+      TEAM_NOTIFICATION_CHANNEL: "${ENV_MONITOR_CHANNEL}"
