Adds cert manager helm repo and release, improves naming

--- a/apps/aso/aso/aso-gitrepo.yaml
+++ b/apps/aso/aso/aso-gitrepo.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: GitRepository
 metadata:
-  name: aso
+  name: azure-service-operator
   namespace: aso
 spec:
   url: https://github.com/Azure/azure-service-operator
