--- a/apps/aso/base/kustomization.yaml
+++ b/apps/aso/base/kustomization.yaml
@@ -4,4 +4,6 @@ resources:
   - ../../base
   - ../aso/aso.yaml
   - ../aso/aso-gitrepo.yaml
+  - ../cert-manager/cert-manager.yaml
+  - ../cert-manager/cert-manager-helmrepo.yaml
 namespace: aso
