--- a/apps/aso/cert-manager/cert-manager.yaml
+++ b/apps/aso/cert-manager/cert-manager.yaml
@@ -2,13 +2,13 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: azure-service-operator
+  name: cert-manager
 spec:
   interval: 5m
   chart:
     spec:
-      chart: ./v2/charts/azure-service-operator
+      chart: cert-manager
       sourceRef:
-        kind: GitRepository
-        name: aso
+        kind: HelmRepository
+        name: cert-manager
         namespace: aso
