Update GitRepo name ref on release

--- a/apps/aso/aso/aso.yaml
+++ b/apps/aso/aso/aso.yaml
@@ -10,5 +10,5 @@ spec:
       chart: ./v2/charts/azure-service-operator
       sourceRef:
         kind: GitRepository
-        name: aso
+        name: azure-service-operator
         namespace: aso
