--- a/apps/fis/fis-hmc-api/fis-hmc-api.yaml
+++ b/apps/fis/fis-hmc-api/fis-hmc-api.yaml
@@ -4,11 +4,9 @@ metadata:
   name: fis-hmc-api
 spec:
   releaseName: fis-hmc-api
+  interval: 1m
   values:
     java:
-      disableTraefikTls: true
-      replicas: 2
-      useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/fis/hmc-api:pr-28-cca03f7-20221011171636 #{"$imagepolicy": "flux-system:fis-hmc-api"}
   chart:
     spec:
