--- a/k8s/namespaces/fis/fis-hmc-api/demo.yaml
+++ b/k8s/namespaces/fis/fis-hmc-api/demo.yaml
@@ -1,4 +1,4 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: fis-hmc-api
@@ -33,7 +33,6 @@ spec:
         IDAM_API_URL: 'https://idam-api.demo.platform.hmcts.net/o/token'
         HMC_FIS_TOPIC_NAME: 'hmc-to-cft-demo'
         HMC_FIS_SUBSCRIPTION_NAME: 'hmc-fis-subscription-demo'
-
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
