add demo image policy

--- a/k8s/namespaces/fact/fact-admin/demo.yaml
+++ b/k8s/namespaces/fact/fact-admin/demo.yaml
@@ -6,6 +6,6 @@ spec:
   values:
     nodejs:
       disableTraefikTls: false
-      image: hmctspublic.azurecr.io/fact/admin:pr-578
+      image: hmctspublic.azurecr.io/fact/admin:pr-578 #{"$imagepolicy": "flux-system:demo-fact-admin"}
       environment:
         NODE_ENV: development
