Changed TTL_GUARD from 365 to 0

--- a/k8s/namespaces/ccd/ccd-data-store-api/perftest.yaml
+++ b/k8s/namespaces/ccd/ccd-data-store-api/perftest.yaml
@@ -40,3 +40,4 @@ spec:
         REQUEST_SCOPE_CACHED_CASE_TYPES_TILL_HOUR: 24
         ROLE_ASSIGNMENT_PAGINATION_ENABLED: true
         ROLE_ASSIGNMENT_PAGE_SIZE: 500
+        TTL_GUARD: 0
