Adds secret to base for testing|

--- a/apps/aso/base/kustomization.yaml
+++ b/apps/aso/base/kustomization.yaml
@@ -6,4 +6,5 @@ resources:
   - ../aso/aso-gitrepo.yaml
   - ../cert-manager/cert-manager.yaml
   - ../cert-manager/cert-manager-helmrepo.yaml
+  - aso-controller-settings.yaml
 namespace: aso
