Refactor codebase to stop kustomize error in 01

--- a/apps/admin/demo/01/kustomization.yaml
+++ b/apps/admin/demo/01/kustomization.yaml
@@ -4,9 +4,10 @@ resources:
   - ../base
   - ../../secrets-csi-driver-crds
   - ../../secrets-csi-driver
-  - ../../traefik2
-  - ../../traefik2-no-proxy
-  - ../../traefik2-auth
+  - ../../traefik2/demo
+  - ../../traefik2/traefik2-private
+  - ../../traefik2/traefik2-no-proxy
+  - ../../traefik2/traefik2-auth-proxy
   - ../../external-dns-2/
   - ../../external-dns-2/external-dns-public
   - ../../external-dns-2/external-dns-private
@@ -18,10 +19,9 @@ patchesStrategicMerge:
   - ../../external-dns-2/demo/external-dns.yaml
   - ../../external-dns-2/demo/01-external-dns.yaml
   - ../../external-dns-2/demo/01-external-dns-private.yaml
-  - ../../traefik2/demo/01.yaml
-  - ../../traefik2/demo/traefik-private.yaml
-  - ../../traefik2-no-proxy/demo/01.yaml
-  - ../../traefik2-auth/demo/01.yaml
-  - ../../oauth2-proxy/demo/01.yaml
+  - ../../traefik2/demo/01/01-private.yaml
+  - ../../traefik2/demo/01/01-no-proxy.yaml
+  - ../../traefik2/demo/01/01-auth-proxy.yaml
   - ../../traefik2/demo/secret-provider.yaml
+  - ../../oauth2-proxy/demo/01.yaml
   - ../../aad-pod-id/mi/demo/azure-identity-patch.yaml
