--- a/apps/admin/traefik2/demo/01/01-private.yaml
+++ b/apps/admin/traefik2/demo/01/01-private.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: traefik2
+  name: traefik2-private
   namespace: admin
 spec:
   values:
