--- a/apps/admin/traefik2/traefik2-private/kustomization.yaml
+++ b/apps/admin/traefik2/traefik2-private/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-nameSuffix: -no-proxy
+namespace: admin
+nameSuffix: -private
 resources:
-  - ../traefik2/traefik2.yaml
+  - ../traefik2.yaml
 patchesStrategicMerge:
-  - traefik2-no-proxy.yaml
+  - traefik2-private.yaml
