Change git repo path to charts

--- a/apps/aso/aso/aso.yaml
+++ b/apps/aso/aso/aso.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: ./v2/charts/azure-service-operator
+      chart: ./v2/charts
       sourceRef:
         kind: GitRepository
         name: azure-service-operator
