Change ASO to HelmRepo

--- a/apps/aso/aso/aso-gitrepo.yaml
+++ b/apps/aso/aso/aso-gitrepo.yaml
@@ -1,10 +1,9 @@
-apiVersion: source.toolkit.fluxcd.io/v1beta1
-kind: GitRepository
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: HelmRepository
 metadata:
   name: azure-service-operator
   namespace: aso
 spec:
-  url: https://github.com/Azure/azure-service-operator
   interval: 10m
-  ref:
-    branch: main
+  url: https://raw.githubusercontent.com/Azure/azure-service-operator/main/v2/charts
+  
