Removes trailing space, renames file

--- a/apps/aso/base/kustomization.yaml
+++ b/apps/aso/base/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - ../../base
   - ../aso/aso.yaml
-  - ../aso/aso-gitrepo.yaml
+  - ../aso/aso-helmrepo.yaml
   - ../cert-manager/cert-manager.yaml
   - ../cert-manager/cert-manager-helmrepo.yaml
 namespace: aso
