--- a/k8s/namespaces/ccd/ccd-data-store-api/demo.yaml
+++ b/k8s/namespaces/ccd/ccd-data-store-api/demo.yaml
@@ -44,3 +44,4 @@ spec:
         LOG_CALLBACK_DETAILS: "*"
         HTTP_CLIENT_READ_TIMEOUT: 10000
         FEIGN_CLIENT_READ_TIMEOUT: 10000
+        DUMMY_RESTART_VAR_2: 1
