--- a/k8s/namespaces/am/am-role-assignment-refresh-batch/perftest-00.yaml
+++ b/k8s/namespaces/am/am-role-assignment-refresh-batch/perftest-00.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   values:
     job:
-      schedule: "* 11 * * *"
+      schedule: "* 12 * * *"
       environment:
+        AM_INFO: false
         DELETE_ORG: true
