--- a/k8s/namespaces/am/am-role-assignment-refresh-batch/perftest-00.yaml
+++ b/k8s/namespaces/am/am-role-assignment-refresh-batch/perftest-00.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     job:
-      schedule: "* 12 * * *"
+      schedule: "* 14 * * *"
       environment:
-        AM_INFO: false
+        AM_INFO: true
         DELETE_ORG: true
