retry unprocessable message on 17 Oct

--- a/k8s/namespaces/wa/wa-case-event-handler/prod.yaml
+++ b/k8s/namespaces/wa/wa-case-event-handler/prod.yaml
@@ -10,4 +10,4 @@ spec:
         AZURE_SERVICE_BUS_DLQ_FEATURE_TOGGLE: true
         LOGGING_LEVEL_UK_GOV_HMCTS: DEBUG
         RESTART: false
-        PROBLEM_MESSAGE_RESET_ID_LIST: ID:82efd37d-09db-4034-9214-f63847988d45:18:1:1-1567,ID:3f97e5fd-2d8c-47d7-b1e1-22bfb4539c08:36:1:1-192,ID:5fcb728f-3123-43ba-8285-9312e83abeac:37:1:1-99,ID:5fcb728f-3123-43ba-8285-9312e83abeac:37:1:1-319,ID:5fcb728f-3123-43ba-8285-9312e83abeac:37:1:1-637,ID:5fcb728f-3123-43ba-8285-9312e83abeac:37:1:1-771,ID:5fcb728f-3123-43ba-8285-9312e83abeac:37:1:1-846,ID:5fcb728f-3123-43ba-8285-9312e83abeac:37:1:1-1417
+        PROBLEM_MESSAGE_RESET_ID_LIST: ID:884a413d-16f2-4e50-89e5-7c1a94bf1661:128:1:1-19
