Stopping retries on demo

--- a/k8s/namespaces/civil/civil-service/demo.yaml
+++ b/k8s/namespaces/civil/civil-service/demo.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/civil/service:prod-fd23dd0-20221017124452 #{"$imagepolicy": "flux-system:civil-service"}
+      image: hmctspublic.azurecr.io/civil/service:pr-1614-2b4308a-20221017140831 #{"$imagepolicy": "flux-system:demo-civil-service"}
       keyVaults:
         civil:
           resourceGroup: civil
