--- a/apps/aso/aso/aso.yaml
+++ b/apps/aso/aso/aso.yaml
@@ -17,7 +17,5 @@ spec:
   - kind: Secret
     name: aso-controller-settings
   values:
-    installCRDs:
-      enabled: true
-    createAzureOperatorSecret:
-      enabled: false
+    installCRDs: true
+    createAzureOperatorSecret: false
