CCD-3818: Increase memory and cpu requests and limits for activity tracker

--- a/k8s/namespaces/ccd/ccd-case-activity-api/aat.yaml
+++ b/k8s/namespaces/ccd/ccd-case-activity-api/aat.yaml
@@ -7,5 +7,9 @@ spec:
   values:
     nodejs:
       replicas: 4
+      memoryRequests: '1Gi'
+      memoryLimits: '2Gi'
+      cpuRequests: '1'
+      cpuLimits: '2'
       environment:
         REDIS_ACTIVITY_TTL: 15
