--- a/k8s/namespaces/ccd/ccd-case-activity-api/prod.yaml
+++ b/k8s/namespaces/ccd/ccd-case-activity-api/prod.yaml
@@ -9,6 +9,10 @@ spec:
       replicas: 16
       autoscaling:
         enabled: false
+      memoryRequests: '1Gi'
+      memoryLimits: '2Gi'
+      cpuRequests: '1'
+      cpuLimits: '2'
       environment:
         REDIS_ACTIVITY_TTL: 15
         CORS_ORIGIN_WHITELIST: "https://www.ccd.platform.hmcts.net,https://ccd.platform.hmcts.net"
