--- a/apps/admin/traefik2/demo/01-no-proxy.yaml
+++ b/apps/admin/traefik2/demo/01-no-proxy.yaml
@@ -7,7 +7,10 @@ metadata:
   namespace: admin
 spec:
   values:
-    loadBalancerIP: 10.50.95.250
-    kubernetes:
-      ingressEndpoint:
-        ip: 51.142.80.151
+    service:
+      spec:
+        loadBalancerIP: "10.50.95.250"
+    providers:
+      kubernetesIngress:
+        ingressEndpoint:
+          ip: 51.142.80.151
