--- a/k8s/namespaces/admin/traefik/patches/perftest/cluster-01/traefik.yaml
+++ b/k8s/namespaces/admin/traefik/patches/perftest/cluster-01/traefik.yaml
@@ -11,3 +11,14 @@ spec:
     service:
       annotations:
         service.beta.kubernetes.io/azure-load-balancer-resource-group: cft-perftest-network-rg
+    affinity:
+      podAntiAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                    - traefik
+                    - konnectivity-agent
+            topologyKey: "kubernetes.io/hostname"
