Add namespaces to podantiaffinity

--- a/apps/admin/traefik2/perftest/00.yaml
+++ b/apps/admin/traefik2/perftest/00.yaml
@@ -22,3 +22,4 @@ spec:
                   values:
                     - konnectivity-agent
             topologyKey: "kubernetes.io/hostname"
+            namespaces: ["admin", "kube-system"]
