--- a/k8s/namespaces/sscs/sscs-tya-notif/demo.yaml
+++ b/k8s/namespaces/sscs/sscs-tya-notif/demo.yaml
@@ -22,7 +22,7 @@ spec:
         SCOTTISH_PO_BOX_ENABLED: true
         HOURS_START_TIME: 0
         HOURS_END_TIME: 23
-        TEST_PROPERTY: false
+        TEST_PROPERTY: true
         TEST_RECIPIENTS_POSTCODE: "*"
     global:
       environment: demo
